--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -1,29 +1,36 @@
 $body-bg: #f2f2f2;
 $primary: #0067b1;
+$dark:#2f2f2f;
+
 
 @import '~bootstrap/scss/bootstrap.scss';
 
-#navbar{
-    text-align: center;
-    background-color:#2b2b2b;
-    color:white;
-    margin:0;
-    padding:0;
-    height:100vh;
 
-    #title{
-        padding:25px 0px;
-        background-color:$primary;
-    }
-    
+/* BOOTSTRAP OVERRIDE */
+
+.btn{
+    border-radius:0px;
+    border:none;
 }
 
 .form-control{
     padding:2px;
 }
 
+
+/* GENERAL */
+
+.hintBox{
+    background-color:$primary;
+    text-align: center;
+    color:white;
+    padding:10px;
+}
+
+
+
 .content{
-    margin-top:30px;
+    margin-top:50px;
 }
 
 .projectDetails{
@@ -49,7 +56,7 @@ $primary: #0067b1;
 }
 
 .fieldList{
-    margin-top:100px;
+    margin-top:60px;
 }
 
 .fieldsLabels{
